# pdf2ai

./: .env.example  AUTHORS  LICENSE  README.md  USER_GUIDE.md  gui.py  pdf2ai.py  pdf2mm.py  pyproject.toml  requirements.txt  run.bat  run.sh  run_gui.bat  run_gui.sh
configs/: example.yaml
tests/: smoke_test.py
