[project]
name = "pdf2ai"
version = "1.0.0"
description = "PDF to multimodal corpus converter - Convert PDF documents with images to AI-agent-friendly formats"
authors = [
    {name = "Andre Lorbach", email = "alorbach@adiscon.com"}
]
maintainers = [
    {name = "Andre Lorbach", email = "alorbach@adiscon.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["pdf", "multimodal", "ai", "conversion", "ocr", "embeddings"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: General",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "PyMuPDF>=1.23.0",
    "Pillow>=10.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.65.0",
    "numpy>=1.23.0",
    "pytesseract>=0.3.10",
    "pyyaml>=6.0",
    "openai>=1.0.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "sentence-transformers>=2.2.0",
    "langchain>=0.1.0",
    "langchain-community>=0.1.0"
]

[project.urls]
"Homepage" = "https://github.com/alorbach/pdf2ai"
"Bug Tracker" = "https://github.com/alorbach/pdf2ai/issues"

[project.scripts]
pdf2ai = "pdf2ai:main"
pdf2ai-gui = "gui:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["."]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true